# windows-rust-wasapi-example

./: Cargo.toml  README.md
resources/: feature_flag_searching.md
src/: main.rs  tone.rs
