[package]
name = "windows-wasapi"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.56.0"
windows = {version = "0.56.0", features = ["Win32_System_Com", "Win32_Media_Audio", "Win32_Devices_FunctionDiscovery", "Win32_Media_KernelStreaming", "Win32_UI_Shell_PropertiesSystem", "Win32_Media_Multimedia"]}
